# backend/src/app.ts
@@ -17,6 +17,7 @@ import { throttleMiddleware } from "./middleware/throttle.middleware";
 
 import swaggerJSDoc, { OAS3Definition, Options } from "swagger-jsdoc";
 import { serve, setup } from "swagger-ui-express";
+import SkinRouter from "./routes/skin.route";
 
 const app: Express = express();
 
@@ -46,6 +47,7 @@ if (env.NODE_ENV === "development") {
 
 app.use("/api/accounts", AccountRouter);
 app.use("/api/price-tiers", PriceTierRouter);
+app.use("/api/skins", SkinRouter);
 app.use("/api/statistics", StatisticRouter);
 app.use("/api/carousels", CarouselSlideRouter);
 app.use("/api/upload", UploadRouter);
