# backend/src/controllers/account.controller.ts
@@ -1,6 +1,6 @@
 import { Request, Response, NextFunction } from "express";
 import { AccountService } from "../services/account.service";
-import { UnprocessableEntityError } from "../lib/error";
+import { BadRequestError, UnprocessableEntityError } from "../lib/error";
 import { RankService } from "../services/rank.service";
 import { Prisma } from "@prisma/client";
 import { updateAllAccountRankQueue } from "../lib/queues/accountrank.queue";
@@ -271,4 +271,39 @@ export class AccountController {
       return next(error);
     }
   };
-}
+
+  addSkinsToAccount = async (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    try {
+      const updated = await this.accountService.addSkinsToAccount(
+        parseInt(req.params.id), 
+        req.body.skinList as number[]
+      )
+
+      return res.status(200).json({data: updated})
+    } catch (error) {
+      return next(error)
+    }
+  }
+
+  
+  removeSkinsFromAccount = async (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    try {
+      const updated = await this.accountService.removeSkinsFromAccount(
+        parseInt(req.params.id), 
+        req.body.skinList as number[]
+      )
+
+      return res.status(200).json({data: updated})
+    } catch (error) {
+      return next(error)
+    }
+  }
+};
